syntax = "proto2";

message AUConnect {
  required int64 worldid = 1;
  required int64 seqnum = 2;
}

message UAConnected {
  required int64 worldid = 1;
  required int64 ack =2;
}

message AUOrderDetail {
  required string ups_userid = 1;
  required int64 pd_id = 2;
  required string pd_des = 3;
  required int32 quantity = 4;
}

message AUWarehouseInfo {
  required int32 whnum = 1;
  required int32 whx = 2;
  required int32 why = 3;
}

message AUCallTruck{
  required int64 packageid = 1;
  required int32 destx = 2;
  required int32 desty = 3;
  required AUWarehouseInfo wh = 4;
  required AUOrderDetail order = 5;
}

message UATruckArrive {
  required int32 truckid = 1;
  required int64 packageid = 2;
  required int32 whnum = 3;
}

message AUReadyToDeliver {
  required int32 truckid = 1;
  required int64 packageid = 2;
  required int32 destx = 3;
  required int32 desty = 4;
  required int32 whnum =5;
}

message UADelivered {
  required int64 packageid = 1;
  required int32 destx = 2;
  required int32 desty = 3;
}

message AUCommand {
  required int64 type = 1; // 0 for AUCallTruck, 1 for AUReadyToDeliver
  optional AUCallTruck au_call_truck = 2;
  optional AUReadyToDeliver au_ready_deliver = 3;
  required int64 seqnum = 4;
  optional string err = 5;
}

message UAResponse {
  required int64 type = 1; // 0 for UATruckArrive, 1 for UADelivered
  optional UATruckArrive ua_truck_arrive = 2;
  optional UADelivered ua_delivered = 3;
  required int64 ack = 4;
  optional string err = 5;
}
